force-app/main/default/objects/Invoice_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional custom description or notes for this line item</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>