force-app/main/default/objects/Invoice_Line_Item__c/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Quantity__c)) &amp;&amp; NOT(ISBLANK(Unit_Price__c)),
    Quantity__c * Unit_Price__c * (1 - IF(ISBLANK(Discount_Percent__c), 0, Discount_Percent__c)),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>