force-app/main/default/objects/Invoice_Line_Item__c/fields/Line_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Name__c</fullName>
    <description>Auto-populated display name for the line item. Shows Subscription product/plan or Product name depending on Type.</description>
    <formula>IF(
    NOT(ISBLANK(Subscription__c)),
    Subscription__r.Price_Plan__r.Product__r.Name &amp; " - " &amp; TEXT(Subscription__r.Price_Plan__r.Billing_Frequency__c) &amp; " (" &amp; TEXT(Period_Start__c) &amp; " to " &amp; TEXT(Period_End__c) &amp; ")",
    IF(
        NOT(ISBLANK(Product__c)),
        Product__r.Name &amp; " (" &amp; TEXT(Type__c) &amp; ")",
        "Custom Line Item"
    )
)</formula>
    <label>Line Item Name</label>
    <type>Text</type>
</CustomField>