force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Cannot_Delete_After_Invoice_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Delete_After_Invoice_Sent</fullName>
    <active>true</active>
    <description>Prevents deleting line items after invoice has been sent to customer</description>
    <errorConditionFormula>OR(
    ISPICKVAL(Invoice__r.Status__c, &apos;Sent&apos;),
    ISPICKVAL(Invoice__r.Status__c, &apos;Paid&apos;),
    ISPICKVAL(Invoice__r.Status__c, &apos;Overdue&apos;),
    ISPICKVAL(Invoice__r.Status__c, &apos;Voided&apos;)
)</errorConditionFormula>
    <errorMessage>Cannot delete line items after invoice has been sent. Void the invoice if needed.</errorMessage>
</ValidationRule>