force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Cannot_Edit_After_Invoice_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_After_Invoice_Sent</fullName>
    <active>true</active>
    <description
  >Prevents editing line items after invoice has been sent to customer</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        ISPICKVAL(Invoice__r.Status__c, &apos;Sent&apos;),
        ISPICKVAL(Invoice__r.Status__c, &apos;Paid&apos;),
        ISPICKVAL(Invoice__r.Status__c, &apos;Overdue&apos;),
        ISPICKVAL(Invoice__r.Status__c, &apos;Voided&apos;)
    )
)</errorConditionFormula>
    <errorMessage
  >Cannot modify line items after invoice has been sent. Create a new invoice or void this one.</errorMessage>
</ValidationRule>