force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Discount_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Discount_Percent__c &lt; 0,
    Discount_Percent__c &gt; 1
)</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>Discount must be between 0% and 100%</errorMessage>
</ValidationRule>