force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Non_Negative_Unit_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Unit_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Unit Price cannot be negative</errorMessage>
</ValidationRule>