force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Positive_Line_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Line_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero</errorMessage>
</ValidationRule>